<resources>
    <string name="app_name">ViewPager2Advanced</string>
    <string name="see_all">See All</string>
    <string name="title_slider_example">Slider</string>
    <string name="title_card_example">Card</string>
    <string name="title_tab_example">Tab</string>
    <string name="title_dynamic_tab_example">Dynamic Tab</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_fragment_card">Fragment Card</string>
    <string name="title_fragment_slider">Fragment Slider</string>
    <string name="title_fragment_tab">Fragment Tab</string>
    <string name="title_fragment_dynamic_tab">Fragment Dynamic Tab</string>
    <string name="action_add_favourite">Add favourite</string>
    <string name="action_delete">Delete</string>
    <string name="lorem_ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum.</string>
    <string name="title_text">Lorem ipsum </string>
    <string name="caption_text">Caption</string>

    <string name="pending_fragment">Pending</string>
    <string name="delivered_fragment">Delivered</string>
    <string name="confirmed_fragment">Confirmed</string>
    <string name="increase_count">Increase Count</string>
</resources>
