<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/item_card_view_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_item_banner_2"
                android:layout_width="120dp"
                android:layout_height="200dp"
                android:layout_marginEnd="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:id="@+id/linearlyout_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/btn_item_2"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                android:layout_toEndOf="@+id/iv_item_banner_2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_item_title_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/title_text"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_item_caption_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/caption_text"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_item_description_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/lorem_ipsum_text"
                    android:textColor="@color/colorGray2"
                    android:textSize="14sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_item_2"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/iv_item_banner_2"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@id/iv_item_banner_2"
                android:text="@string/title_text" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>