<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/item_card_view_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_item_banner_7"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_launcher_background"
                    tools:ignore="ContentDescription" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btn_item_notification_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp"
                    android:layout_toStartOf="@+id/btn_item_share_7"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:foreground="?selectableItemBackground"
                        android:src="@drawable/ic_notifications_black_48dp"
                        android:tint="@color/colorGray2"
                        tools:ignore="ContentDescription" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btn_item_share_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:foreground="?selectableItemBackground"
                        android:src="@drawable/ic_share_black_48dp"
                        android:tint="@color/colorGray2"
                        tools:ignore="ContentDescription" />

                </com.google.android.material.card.MaterialCardView>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tv_item_title_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/title_text"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView
                    android:id="@+id/tv_item_caption_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_item_title_7"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/caption_text"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:id="@+id/tv_item_description_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_item_caption_7"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/lorem_ipsum_text"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

            </RelativeLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>